wacc/test/golden/syntaxErr.sequence.extraSeq
# extra sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip; end


(line 11, column 13):
  unexpected keyword end
  expected begin, bool, char, end of skip, exit, free, fst, identifier, if, int, pair, print, println, read, return, skip, snd, string, or while
  >
  >begin skip; end
               ^^^
  >